<resources>
    <string name="app_name">DropperPOS</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="low_stock_alerts">Low Stock Alerts</string>
    <string name="view_selected_products">View selected products</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="buying_price">Buying Price</string>
</resources>