<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"/>

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        />

    <EditText
        android:id="@+id/etBuying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buying_price"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etSelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Selling Price"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Stock"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Product"
        android:layout_marginTop="12dp"/>

</LinearLayout>